[fix] 충돌 오류